[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.2"
dotenvy = "0.15.7"
actix-rt = "2.10.0"

redis = { version = "0.21", features = ["aio", "tokio-comp"] }
log = "0.4.22"
env_logger = "0.11.5"