[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.2"
dotenvy = "0.15.7"
actix-rt = "2.10.0"

redis = { version = "0.21", features = ["aio", "tokio-comp"] }
log = "0.4.22"
env_logger = "0.11.5"

#utoipa = { version = "3.2" }
apistos = { version = "0.3.6", features = ["extras", "qs_query", "swagger-ui", "url" ] }
schemars = { package = "apistos-schemars", version = "0.8", features = ["impl_json_schema"] }

sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "macros", "chrono"] }
chrono = { version = "0.4.38" , features = ["serde"]}
rand = "0.8.5"
argon2 = "0.5.3"


[[bin]]
name = "url_shortener"
path = "src/main.rs"
